// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`K8s cluster selector render cluster selector screen with data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main header StyledProps--font-large"
      >
        Select Connector
      </p>
      <div
        class="Layout--horizontal StyledProps--main infoSection"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="info"
        >
          <svg
            height="24"
            viewBox="0 0 12 12"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            The connectors shown below are the clusters who are connected to a 
            <span>
              Harness Delegate
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main"
          >
            A 
            <span>
              Harness Delegate
            </span>
             is a service that can run in local network or VPC to connect artifact servers, infrastructure and verification providers to install projects and pipelines. If the cluster you would like to monitor does not have a Harness delegate connected to it, you will have to create a connector
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="padding-bottom: 20px; padding-top: 20px; border-bottom: 1px solid #CDD3DD; justify-content: space-between;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main ctaContainer"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
            style="background-color: rgb(2, 120, 213); color: rgb(243, 243, 250);"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Add selected
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main borderBtn Button--with-current-color Button--iconOnly Button--without-shadow"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              + Create a new connector
            </span>
          </button>
        </div>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main  "
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon "
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 5%;"
            >
              
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              CONNECTOR
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              DETAILS
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              LASTACTIVITY
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              CONNECTIVITYSTATUS
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              LASTUPDATED
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 5%;"
              >
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio radioSelector StyledProps--main"
                >
                  <input
                    checked=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 20%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    >
                      <div
                        class="name"
                        color="black"
                        title="ry-04-07-21"
                      >
                        ry-04-07-21
                      </div>
                    </div>
                    <div
                      class="identifier"
                      title="ry040721"
                    >
                      ry040721
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 20%;"
              >
                <div
                  class="wrapper"
                >
                  <div
                    color="black"
                  >
                    <div
                      class="name flex"
                    >
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                      >
                        <span>
                          UrlLabel
                        </span>
                        :
                      </span>
                      <p
                        class="StyledProps--font StyledProps--main"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 20%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="activity"
                  >
                    <svg
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 0C3.538.036-.035 3.644 0 8.053.036 12.427 3.61 16 8 16h.054c2.133-.018 4.142-.853 5.635-2.382 1.493-1.53 2.329-3.538 2.311-5.671C15.965 3.573 12.391 0 8 0zm5.262 8.836h-1.635a.52.52 0 01-.48-.338l-.836-2.276-1.653 5.245a.49.49 0 01-.462.355H8.16a.51.51 0 01-.462-.302L5.796 7.253l-.907 1.351a.5.5 0 01-.427.232H2.667a.516.516 0 010-1.032h1.511L5.44 5.902a.513.513 0 01.48-.23.488.488 0 01.427.301L8.07 9.867l1.725-5.423a.512.512 0 01.48-.355c.23 0 .426.124.498.338l1.208 3.36h1.28c.285 0 .516.23.516.515a.531.531 0 01-.516.534z"
                        fill="#1D76FF"
                      />
                    </svg>
                  </span>
                  dummy date
                </div>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 15%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                    style="width: 100px;"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    >
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--inline"
                        style="display: inline-flex; align-items: center;"
                      >
                        <span
                          class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                          icon="full-circle"
                        >
                          <svg
                            data-icon="full-circle"
                            height="6"
                            viewBox="0 0 16 16"
                            width="6"
                          >
                            <desc>
                              full-circle
                            </desc>
                            <path
                              d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        active
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 20%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                >
                  dummy date
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main Pagination--text StyledProps--inline"
            >
              Showing 
              <strong>
                1
              </strong>
               of 
              <strong>
                1
              </strong>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`K8s cluster selector render empty cluster selector screen 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main header StyledProps--font-large"
      >
        Select Connector
      </p>
      <div
        class="Layout--horizontal StyledProps--main infoSection"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="info"
        >
          <svg
            height="24"
            viewBox="0 0 12 12"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            The connectors shown below are the clusters who are connected to a 
            <span>
              Harness Delegate
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main"
          >
            A 
            <span>
              Harness Delegate
            </span>
             is a service that can run in local network or VPC to connect artifact servers, infrastructure and verification providers to install projects and pipelines. If the cluster you would like to monitor does not have a Harness delegate connected to it, you will have to create a connector
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="padding-bottom: 20px; padding-top: 20px; border-bottom: 1px solid #CDD3DD; justify-content: space-between;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main ctaContainer"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
            disabled=""
            style="background-color: rgb(2, 120, 213); color: rgb(243, 243, 250);"
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Add selected
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main borderBtn Button--with-current-color Button--iconOnly Button--without-shadow"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              + Create a new connector
            </span>
          </button>
        </div>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main  "
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon "
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 5%;"
            >
              
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              CONNECTOR
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              DETAILS
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              LASTACTIVITY
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              CONNECTIVITYSTATUS
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              LASTUPDATED
            </div>
          </div>
          <div
            class="body"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
